left side still need to some fix in responsive design to jump into right side

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,11 +2,18 @@ body{background-color:#BEB8AC;}
 .left{
 	background-color: #3E3F42;
 	text-transform: capitalize;
+	position: relative;
 }
 
 .cut{
 	clip-path: polygon(0 0, 100% 0%, 0 100%, 0% 100%);
-	background-color: aqua;
+	background-color: #2FB7FE;
+	position: absolute;
+	height: 203px;
+	width: 290px;
+	top: -1px;
+	left:0px;
+	content: " ";
 
 }
 .name{
@@ -21,18 +28,19 @@ h1 span{
 }
 .job{
 	text-align: center;
-	color: #FFF;
+	color: #AAAEB4;
 	font-size: 10px;
 }
 .topic{
-	color: #FFF;
+	color: #AAAEB4;
 	margin-left: 65px;
 	text-transform: uppercase;
 }
 img{
 	border-radius: 50%;
 	border: 10px solid #B9DCF7;
-	z-index: auto;
+	z-index: 999;
+	position: relative
 }
 .hr1{
 	background-color: #FFF;
@@ -40,7 +48,7 @@ img{
 }
 .menu {
 	list-style: none;
-	color: #FFF;
+	color: #AAAEB4;
 	margin-left: 30px;
 }
 .right{
